package Engine;


//TODO : uml. Done
public interface Action {
    void invoke();
}
