package Engine.Components;

public interface IActivable
{
    boolean isActive();
    void setActive(boolean active);
}

