package Engine;

public interface Condition {
    boolean ask();
}
