package Engine;


public interface IUpdatable {
    void update();
}
