@startuml
skinparam classAttributeIconSize 0
package Engine{
    interface IEngine{
        +{abstract}suscribeToUpdate(object:IGameObject)
        +{abstract}suscribeToUpdate(component:Component )
        +{abstract}waitForFrames(action:Action, frames:int )
        +{abstract}start();
        +{abstract}Pauser():CorePauser
        +{abstract}frameCounter():long
    }

    interface Action{
        invoke()
    }

    IUpdatable <|-- Component
    IUpdatable <|-- GameObject

    interface IUpdatable {
        +update():void
    }

    interface Condition{
        +ask():boolean
    }

    Consumer <|-- OperationUpdate

    class OperationUpdate{

        -toUpdate:IUpdatable
        +OperationUpdate(IUpdatable toUpdate)
        +accept(Object o):void
    }

    IEngine <|-- MyEngine
    MyEngine -- "1" Core
    MyEngine -- "2" IBroadcaster
    class MyEngine{
        #MyEngine();
        +suscribeToUpdate(object:IGameObject)+
        +suscribeToUpdate(component:Component )+
        +waitForFrames(action:Action , frames:int )+
        +start();+
        +Pauser():CorePauser+
        +frameCounter():long+
    }

    interface IActivable{
        isActive:boolean
        setActive(a:boolean)
    }

    class Clock{
        currentTimeNanos():long
    }

    IActivable <|-- Component
    Component -- "1" IGameObject
    abstract class Component{
        -active:boolean=true
        +start()
        +update()
        #frameCounter():long
        +OnEnable()
        +OnDisable()
        +OnDestroy()
        +DestroyComponent()
        +DestroyComponent()
        +transform():ITransform
        #setGameObject(ref:IGameObject)
        +gameObject():IGameObject
        +isActive:boolean+
        +setActive(a:boolean)+
    }

    Interface IGameObject
        {
            +addHitBox(c:HitBox ):HitBox
            +addComponent(c:Component)
            +getComponents():Iterable<Component>
            +void sendMessage( consumer:Consumer<Component>)
            +addChild():IGameObject
            +removeComponent(c:Component )
            +Transform():ITransform
            +update()
            +destroy()
            +setOnDestroy(a:Action )
            +getHitbox():HitBox
            +size():int
            +setRenderer(rend:Renderizable)
            +getRenderer():Renderizable
        }

    IGameObject <|-- GameObject

    GameObject -- "1" IGameObject:root
    note left on link: static
    GameObject -- "*"IGameObject:children,parent
    GameObject -- "*"Component
    GameObject -- "1"ITransform
    GameObject -- "1"HitBox
    class GameObject
    {
        +{static} getRoot():IGameObject
        -GameObject()
        -GameObject(parent:GameObject)
        +addHitBox(c:HitBox ):HitBox
        +addComponent(c:Component)
        +getComponents():Iterable<Component>
        +void sendMessage( consumer:Consumer<Component>)
        +addChild():IGameObject
        +removeComponent(c:Component )
        +transform():ITransform
        +Update()
        +destroy()
        -onDestroy:Action
        +setOnDestroy(a:Action )
        +getHitbox():HitBox
        +size():int
        -renderer:Renderizable
        +setRenderer(rend:Renderizable)
        +getRenderer():Renderizable
    }

    interface ITransform{
        +position():IVector2
        +position3():IVector3
        +top():IVector2
        +top(length:float):IVector2
        +setPosition(position:IVector2)
        +setTop(position:IVector2)
        +rotate(angle:float)
        +setFromPrototype(prototype:ITransform)
        +moveTowards(direction:IVector2)
        +getZcomponent():float
        +setZcomponent(z:float)
        +getLifetime():int
    }

    ITransform <|-- Transform
    Component <|-- Transform
    Transform -- "2"  IVector2: position,top
    class Transform{
        -ZCompontent:float
        -lifetime:int

        +Transform()
        -Transform(position:IVector2)
        +update()+
        +position():IVector2
        +position3():IVector3
        +top():IVector2
        +top(length:float):IVector2
        +setPosition(position:IVector2)
        +setTop(position:IVector2)
        +rotate(angle:float)
        +setFromPrototype(prototype:ITransform)
        +moveTowards(direction:IVector2)
        +getZcomponent():float
        +setZcomponent()
        +getLifetime():int
    }

    Core -- "1" Core:instance
    note on link: static
    Core -- "4" IBroadcaster
    Core -- "2" Invoker
    Core -- "*" Action: Actions for each frame
    class Core{
        -FPS:short
        -paused:boolean
        -currentFrame:long
        -exit:boolean
        -debt:long

        #{static}getInstance():Core
        -Core()
        -clean()
        -endOfFrame()
        -mainLoop()
        -sleep(time:long)
        +Start()
        +waitForSeconds(action:Action,seconds:float)
        +waitForFrames(action:Action,frames:int)

        +setPaused(p:boolean)
        +isPaused():boolean
        +frameCounter():long
    }

    KeyListener <|-- CorePauser
    CorePauser -- "1" CorePauser:instance
    note left on link: static
    CorePauser -- "1" Core
    class CorePauser
    {
        -paused = false:boolean
        -CorePauser()
        +{static} CorePauser Instance()

        +keyTyped(e:KeyEvent )+
        +keyPressed(e:KeyEvent ) +
        +keyReleased(e:KeyEvent ) +
    }

    Component <|-- DoWhen
    DoWhen -- "1" Condition
    DoWhen -- "1" Action
    class DoWhen {
        -cond:boolean
        +DoWhen(condition:Condition, Action action)
        +update()+
    }

    EngineGetter -- "1" EngineGetter:instance
    note left on link: static
    EngineGetter -- "1" IEngine
    class EngineGetter
    {
        + {static}  Instance():EngineGetter
        - EngineGetter()
        +get():IEngine
    }


    Component <|-- While
    While -- "1" Condition
    While -- "2" Action
    class While
    {
        -cond:boolean
        -runs:boolean

        +While(condition:Condition ,codeBlock:Action)

        +update()+
        -checks():Boolean
        +Excecute()

        +OnComplete(onComplete:Action )
    }






}


@enduml
